--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -1,16 +1,15 @@
 .home{
     width: 100%;
     height: 100%;
-    background: slateblue;
 }
 // 头部样式
 .wrapper {
-    position: relative;
+    position: fixed;
     left: 0;
     top: 0;
     z-index: 2;
-    height: 3.125rem;
-    line-height: 3.125rem;
+    height: 3rem;
+    line-height: 3rem;
     width: 100%;
     box-sizing: border-box;
     background: white;
@@ -30,7 +29,7 @@
 .locationWrapper {
     display: flex;
     float: left;
-    height: 3.125rem;
+    height: 3rem;
     width: 40%;
     white-space: nowrap;
     opacity: 1;
@@ -39,7 +38,7 @@
 .locationWrapper .address {
     padding-left: 1.875rem;
     display: inline-block;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -48,7 +47,7 @@
 }
 
 .locationWrapper .iconArrow {
-    height: 3.125rem;
+    height: 3rem;
 }
 
 .locationWrapper.wheel {
@@ -61,7 +60,7 @@
     position: absolute;
     top: 0.625rem;
     right: 2%;
-    line-height: 3.125rem;
+    line-height: 3rem;
     text-align: right;
     width: 50%;
     vertical-align: middle;
@@ -126,4 +125,13 @@
     fill: #999;
     width: 1rem;
     height: 1rem;
+}
+
+//轮播样式
+.slide{
+    height: 13rem !important;
+    background: #999;
+}
+.slide img{
+    width: 100%;
 }
