--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -1,6 +1,5 @@
 .home{
     width: 100%;
-    height: 100%;
 }
 // 头部样式
 .wrapper {
@@ -129,14 +128,193 @@
 
 //轮播样式
 .slide{
-    height: 13rem !important;
+    height: 14rem !important;
     background: #999;
 }
 .slide img{
     width: 100%;
+    height: 100%;
 }
 
 .my-bullet-active{
     background: #75a342 !important;
     opacity: 1 !important;
+}
+// 中间导航栏
+.navWrapper {
+    padding-top: 0.9375rem;
+    background: #FFF;
+    padding-bottom: 0.9375rem;
+}
+
+.itemWrapper {
+    display: inline-block;
+    padding-top: 0.3125rem;
+    width: 20%; }
+
+.imageWrapper {
+    padding-bottom: 58.823%;
+    height: 0;
+    overflow: hidden;
+    text-align: center; }
+
+.image {
+    width: 58.823%;
+    height: auto;
+    display: inline-block; }
+
+.titleWrapper {
+    text-align: center;
+    padding: 0.4375rem 0.3125rem 0.375rem 0.3125rem; 
+}
+
+.title {
+    font-size: 0.75rem;
+    color: #555555;
+    text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+// 限时抢购
+.flashWrapper {
+    position: relative;
+    margin-top: 0.625rem;
+    padding: 1.25rem 0 0.9375rem 0;
+    background: white; 
+    height: 100rem;
+}
+
+.flashTitleWrapper {
+    position: relative;
+    margin: 0 0.625rem 0.625rem 0.625rem;
+    height: 1.5625rem;
+}
+
+.flashTitle {
+    display: inline-block;
+    border-left: 4px #3cb963 solid;
+    padding-left: 0.3125rem;
+    height: 1.3125rem;
+    line-height: 1.3125rem;
+    vertical-align: middle;
+    font-size: 1.1875rem; }
+
+.actionStateText {
+    display: inline-block;
+    vertical-align: middle;
+    line-height: 0.875rem;
+    font-size: 0.875rem;
+    border-radius: 3px;
+    padding: 0.15625rem;
+    /*border: 1px solid #FE3824;*/
+    color: #FE3824;
+    margin-left: 0.3125rem; }
+
+.actionStateTextEnd {
+    display: inline-block;
+    vertical-align: middle;
+    line-height: 0.875rem;
+    font-size: 0.875rem;
+    border-radius: 3px;
+    padding: 0.15625rem;
+    border: 1px solid #999;
+    color: #666;
+    margin-left: 0.3125rem;
+}
+
+.more {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 1.5625rem;
+    line-height: 1.5625rem;
+    font-size: 0.875rem;
+    color: #2EB257;
+}
+
+.flashItemsWrapper {
+    white-space: nowrap;
+    width: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
+    overflow-scrolling: touch;
+}
+
+.itemsWrapper::-webkit-scrollbar{
+    display: none
+}
+
+.bottomWrapper {
+    display: inline-block;
+    padding: 0 0.3125rem;
+    margin: 0 0.5rem;
+    white-space: normal;
+    width: 28%; }
+
+@media screen and (min-width: 0px) and (max-width: 320px) {
+    .bottomItemWrapper {width: 33%; }
+}
+
+.bottomItemImageWrapper {
+    height: 0;
+    padding-bottom: 100%;
+    overflow: hidden;
+    margin-bottom: 0.625rem;
+    position: relative; }
+.bottomItemImage {
+    width: 100%;
+    height: auto;
+    display: block; }
+.name {
+    margin-bottom: 0.625rem;
+    height: 2.5rem;
+    line-height: 1.25rem;
+    font-size: 0.8125rem;
+    word-break: break-all;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical; }
+.originPrice {
+    margin-bottom: 0.3125rem;
+    font-size: 0.6875rem;
+    color: #999999;
+    text-decoration: line-through;
+}
+.noticeSoldOut span {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    display: inline-block;
+    width: 60%;
+    text-align: center;
+    color: #FFF;
+    font-size: 0.75rem;
+    height: 1.25rem;
+    line-height: 1.25rem;
+    background: rgba(0, 0, 0, 0.4);
+    border-radius: 1.25rem; }
+
+.priceWrapper {
+    position: relative;
+}
+
+.price {
+    height: 1.875rem;
+    line-height: 1.875rem;
+    font-size: 0.6875rem;
+    color: #FE6263;
+}
+
+.iconCartWrapper {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 1.875rem;
 }
