--- a/src/static/css/base.css
+++ b/src/static/css/base.css
@@ -15,15 +15,33 @@ body, div, span, header, footer, nav, section, aside, article, ul, dl, dt, dd, l
 html, body{
     height: 100%;
     width: 100%;
+    max-width: 750px;
+    margin: 0 auto;
     background-color: #F5F5F5;
 }
 #root{
     width: 100%;
-    height: 100%;
 }
 .am-tab-bar{
-    position: absolute;
+    position: fixed;
     left:0;
     bottom:0;
     width: 100%;
+    height: auto !important;
+    z-index: 99;
+}
+.loadingContainer{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.loadingContainer>span{
+    margin-left: 0.5rem;
+    color: #666;
 }
