--- a/src/pages/category/category.module.scss
+++ b/src/pages/category/category.module.scss
@@ -1,5 +1,267 @@
-.cate-gory{
+.searchWrapper {
+    padding: 0.5rem 0.625rem;
+    background: #FFF;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    border-bottom: solid 1px #E6E6E6;
+    z-index: 999;
+}
+
+.searchBox {
+    display: block;
+    padding: 0 0.875rem 0 1.75rem;
+    border-radius: 1.75rem;
+    height: 1.75rem;
+    line-height: 1.75rem;
+    font-size: 0.875rem;
+    background: #F2F2F2; }
+
+.iconSearchWrapper {
+    position: absolute;
+    left: 0.9375rem;
+    top: 0.75rem;
+    width: 1.25rem;
+    height: 1.25rem;
+}
+
+.icon {
+    fill: #999;
+    width: 1rem;
+    height: 1rem;
+}
+
+.iconSearch {
+    width: 100%;
+    height: 100%; }
+
+.searchPrompt {
+    color: #B5B5B5;
+}
+
+.listWrapper {
+    display: flex;
+    position: absolute;
+    top: 2.75rem;
+    bottom: 3rem;
+    width: 100%;
+    overflow: hidden;
+}
+
+.leftWrapper {
+    background-color: #F4F4F4;
+    width: 5.3125rem;
+    flex: 0 0 5.3125rem;
+}
+
+.categoryItem {
+    padding: 0.75rem 0;
+    border-bottom: solid 1px #E8E9E8;
+    position: relative;
+}
+
+.categoryItem .textWrapper {
+    line-height: 1.25rem;
+    border-left: solid 0.1875rem transparent;
+    padding: 0.3125rem 0.6875rem;
+    font-size: 0.8125rem;
+    color: #666666;
+}
+
+.categoryItem.selected {
+    background: #FFF;
+}
+
+.categoryItem.selected .textWrapper {
+    border-left-color: #3cb963;
+    font-weight: bold;
+    font-size: 0.875rem;
+    color: #333333;
+}
+
+@media (min-width: 960px) {
+    .wrapper {
+        border-right: 1px solid #E8E9E8;
+    }
+
+    .wrapper .categoryItem {
+        background: #fff;
+    }
+}
+
+.contextWrapper {
+    position: absolute;
+    left: 5.3125rem;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    background: #FFF;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+    overflow-scrolling: touch;
+}
+
+.categoryTitle {
+    padding: 0 0.3125rem;
+    height: 1.25rem;
+    line-height: 1.25rem;
+    font-size: 0.75rem;
+    background: #F8F8F8;
+    color: #666666;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.productWrapper {
+    position: relative;
+    padding: 0.8125rem 0;
+    background: #FFF;
+}
+
+.productWrapper + .productWrapper {
+    border-top: solid 1px #EEEEEE;
+}
+
+.imageWrapper {
+    position: absolute;
+    left: 0;
+    top: 0.2375rem;
+    width: 4.0625rem;
+    height: 4.0625rem;
+    overflow: hidden;
+    border-radius: 4px;
+}
+
+.image {
     width: 100%;
     height: 100%;
-    background: blue;
+    display: block;
+}
+
+.noticeGreen, .noticeGray {
+    position: absolute;
+    height: 100%;
+    text-align: center;
+}
+
+.noticeGreen {
+    background: #76DA96;
+    color: #FFF;
+}
+
+.noticeGray {
+    background: rgba(255, 255, 255, 0.6);
+}
+
+.noticeGray span {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    display: inline-block;
+    width: 80%;
+    text-align: center;
+    color: #FFF;
+    font-size: 0.75rem;
+    height: 1.25rem;
+    line-height: 1.25rem;
+    background: rgba(0, 0, 0, 0.4);
+    border-radius: 1.25rem;
+}
+
+.infoWrapper {
+    position: relative;
+    padding: 0 0.625rem 0.4rem 4.6625rem;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+.nameWrapper {
+    min-height: 2.1875rem;
+}
+
+.name {
+    line-height: 1.25rem;
+    word-break: break-all;
+    font-size: 0.9375rem;
+    color: #333333;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+.name .nameTag {
+    margin-right: 0.125rem;
+    vertical-align: middle;
+}
+.name .nameText {
+    vertical-align: middle;
+}
+
+.spec {
+    min-height: 1.25rem;
+    line-height: 1.25rem;
+    font-size: 0.75rem;
+    color: #999999;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.tagsWrapper {
+    margin-top: 0.1875rem;
+    max-height: 1.0625rem;
+    line-height: 0.8125rem;
+    overflow: hidden;
+}
+
+.H1B9Rvu {
+    height: 1rem;
+}
+
+.tag + .tag {
+    margin-left: 0.3125rem;
+}
+
+.priceWrapper {
+    position: relative;
+}
+
+.price {
+    display: inline-block;
+    height: 1.875rem;
+    line-height: 1.875rem;
+    font-weight: bold;
+    font-size: 0.75rem;
+    color: #FE6263;
+}
+
+.originPrice {
+    display: inline-block;
+    margin-left: 0.3125rem;
+    height: 1.875rem;
+    line-height: 1.875rem;
+    text-decoration: line-through;
+    font-size: 0.6875rem;
+    color: #B2B2B2;
+}
+
+.iconCartWrapper {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 1.875rem;
+}
+
+.icon {
+    fill: #999;
+    width: 1rem;
+    height: 1rem;
+}
+
+.iconCart {
+    display: block;
+    width: 1.875rem;
+    height: 1.875rem;
 }
