--- a/src/pages/cart/cart.module.scss
+++ b/src/pages/cart/cart.module.scss
@@ -1,5 +1,180 @@
-.cart{
+#cart{
     width: 100%;
     height: 100%;
-    background: pink;
+    background-color: #f5f5f5;
+}
+
+.titleWrapper{
+    width: 100%;
+    height: 2.6rem;
+    background: #fff;
+    -webkit-background-size: 0.1rem 4.4rem;
+    background-size: 0.1rem 4.4rem;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 999;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.titleWrapper .clearCart{
+    background-color: transparent;
+    position: absolute;
+    right: 0.3rem;
+    color: red;
+    font-size: 0.8rem;
+}
+
+.contentWrapper{
+    padding-top: 3.5rem;
+}
+
+/*列表内容*/
+.contentWrapperList{
+    padding-bottom: 6rem;
+}
+
+.contentWrapperList section{
+    background-color: #fff;
+}
+
+.cartCheckBox{
+    background: url("./images/shop-icon.png") no-repeat;
+    -webkit-background-size: 2.5rem 5rem;
+    background-size: 2.5rem 5rem;
+    width: 1rem;
+    height: 1rem;
+}
+
+.cartCheckBox.checked{
+    background-position: -1.2rem 0;
+}
+
+.shopCartListCon{
+    display: flex;
+    height: 6rem;
+    border-bottom:  0.01rem solid #e0e0e0;
+    margin-bottom: 0.7rem;
+    padding: 0.5rem 0;
+}
+
+.shopCartListCon .left{
+    /*background: purple;*/
+    flex: 1;
+    display: flex;
+    /*justify-content: center;*/
+}
+
+.shopCartListCon .left span{
+    display: inline-block;
+    margin-top: 0.8rem;
+    margin-left: 0.5rem;
+}
+
+
+.shopCartListCon .center{
+    /*background: blue;*/
+    flex: 3;
+}
+
+.shopCartListCon .center img{
+    width: 100%;
+    height: 100%;
+}
+
+.shopCartListCon .right{
+    /*background: orangered;*/
+    flex: 6;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+
+    position: relative;
+}
+
+.shopCartListCon .right span{
+    height: 2.2rem;
+    line-height: 1.2rem;
+    overflow: hidden;
+    margin-bottom: 0.3rem;
+    font-size: 0.8rem;
+    color: #000;
+}
+
+.shopCartListCon .bottomContent{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.shopCartListCon .bottomContent .shopPrice{
+    font-size: 0.8rem;
+}
+
+.shopCartListCon .right .shopDeal span{
+    display: inline-block;
+    width: 1rem;
+    height: 1.2rem;
+    line-height: 1.2rem;
+    text-align: center;
+    float: left;
+}
+
+.shopCartListCon .right .shopDeal input{
+    float: left;
+    width: 2rem;
+    height: 1.2rem;
+    text-align: center;
+    margin: 0 0.2rem;
+    font-size: 0.8rem;
+}
+
+/*底部通栏*/
+.tabBar{
+    position: fixed;
+    left:0;
+    bottom:2.7rem;
+    width:100%;
+    height: 2.5rem;
+    background-color: #fff;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-top: 0.01rem solid #e0e0e0;
+}
+
+.tabBarLeft{
+    display: flex;
+    align-items: center;
+    margin-left: 0.5rem;
+}
+
+.tabBarLeft .selectAll{
+    margin-left: 1rem;
+    font-size: 1rem;
+}
+
+.totalPrice{
+    color: #E9232C;
+}
+
+.tabBarRight .pay{
+    width:5rem;
+    height: 2rem;
+    background-color: #E9232C;
+    border-radius: 1rem;
+    margin-right: 0.5rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    color: #fff;
 }
