--- a/src/pages/order/components/myAddress/myAddress.module.scss
+++ b/src/pages/order/components/myAddress/myAddress.module.scss
@@ -7,14 +7,16 @@
     background: #fff;
     z-index:99;
     transition: all 300ms;
-}
-
-:global(.message-fade-appear){
     opacity: 0;
     transform: translateX(200px)
 }
 
+// :global(.message-fade-appear){
+//     opacity: 0;
+//     transform: translateX(200px)
+// }
+
 :global(.message-fade-enter-done){
-    opacity: 1;
-    transform: translateX(0)
+    opacity: 1 !important;
+    transform: translateX(0) !important;
 }
