--- a/src/pages/order/order.module.scss
+++ b/src/pages/order/order.module.scss
@@ -10,8 +10,40 @@
     margin-top: 50px;
 }
 
-
 #wrapper{
     width: 100%;
     overflow: hidden;
 }
+
+.myList{
+    margin-top: 0.2rem;
+}
+
+.payOrderContainer{
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 2.7rem;
+    left: 0;
+    bottom: 0;
+    padding-left: 7rem;
+    background: #fff;
+}
+.all, 
+.money{
+    font-size: 1rem;
+}
+.money{
+    color: red;
+}
+.payOrder{
+    width: 5.5rem;
+    height: 100%;
+    font-size: 1rem;
+    background: red;
+    color: #fff;
+    text-align: center;
+}
+
